tests/spec/emit/snapshots/interop_lisette_result_slice_option_let.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  
  fn make() -> Result<Slice<Option<string>>, error> {
    Ok([Some("hi"), None])
  }
  
  fn main() {
    let r = make()
    match r {
      Ok(xs) => {
        for x in xs {
          match x {
            Some(v) => fmt.Println(v),
            None => fmt.Println("none"),
          }
        }
      },
      Err(e) => { let _ = e },
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func make_() ([]lisette.Option[string], error) {
	return []lisette.Option[string]{
		lisette.MakeOptionSome("hi"),
		lisette.MakeOptionNone[string](),
	}, nil
}

func main() {
	r, err := make_()
	if err == nil {
		for _, x := range r {
			if x.Tag == lisette.OptionSome {
				fmt.Println(x.SomeVal)
			} else {
				fmt.Println("none")
			}
		}
	} else {
		_ = err
	}
}
