tests/spec/emit/snapshots/interop_lisette_tuple_nested_option_slot.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  fn make() -> (Option<Slice<Option<string>>>, int) {
    (Some([Some("hi"), None]), 7)
  }
  
  fn main() {
    let t = make()
    let (xs, n) = t
    let _ = n
    match xs {
      Some(inner) => { for x in inner { let _ = x } },
      None => {},
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func make_() (lisette.Option[[]lisette.Option[string]], int) {
	return lisette.MakeOptionSome([]lisette.Option[string]{
		lisette.MakeOptionSome("hi"),
		lisette.MakeOptionNone[string](),
	}), 7
}

func main() {
	ret, ret_1 := make_()
	t := lisette.MakeTuple2(ret, ret_1)
	xs := t.First
	if xs.Tag == lisette.OptionSome {
		for _, x := range xs.SomeVal {
			_ = x
		}
	}
}
