tests/spec/emit/snapshots/interop_map_alias_value_unwrapped_at_go_struct_literal.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:go/ast"
  
  type Objects = mut Map<string, Option<mut Ref<ast.Object>>>
  
  fn main() {
    let mut obj = ast.Object {
      Kind: ast.Bad,
      Name: "x",
      Decl: None,
      Data: None,
      Type: None,
    }
    let mut objects: Objects = Map.new<string, Option<mut Ref<ast.Object>>>()
    objects["present"] = Some(&obj)
    objects["absent"] = None
    let scope = ast.Scope {
      Outer: None,
      Objects: Some(objects),
    }
    let _ = scope
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"go/ast"
)

type Objects = map[string]lisette.Option[*ast.Object]

func main() {
	obj := ast.Object{
		Kind: ast.Bad,
		Name: "x",
		Decl: lisette.MakeOptionNone[any](),
		Data: lisette.MakeOptionNone[any](),
		Type: lisette.MakeOptionNone[any](),
	}
	objects := make(map[string]lisette.Option[*ast.Object])
	objects["present"] = lisette.MakeOptionSome(&obj)
	objects["absent"] = lisette.MakeOptionNone[*ast.Object]()
	unwrapped := make(map[string]*ast.Object, len(objects))
	for i, v := range objects {
		if v.Tag == lisette.OptionSome {
			unwrapped[i] = v.SomeVal
		} else {
			unwrapped[i] = nil
		}
	}
	scope := ast.Scope{
		Outer:   nil,
		Objects: unwrapped,
	}
	_ = scope
}
