tests/spec/emit/snapshots/interop_nested_option_collection_bridges_go_field_round_trip.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/nested"
  
  fn main() {
    let values: Option<Slice<Option<int>>> = Some([Some(1), None])
    let container = nested.Container { Values: values }
    let roundtrip = container.Values
    let _ = roundtrip
  }
---
package main

import (
	"example.com/nested"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	values := lisette.MakeOptionSome([]lisette.Option[int]{lisette.MakeOptionSome(1), lisette.MakeOptionNone[int]()})
	var ptr *[]*int
	if values.Tag == lisette.OptionSome {
		src := values.SomeVal
		unwrapped := make([]*int, len(src))
		for i, v := range src {
			if v.Tag == lisette.OptionSome {
				unwrapped[i] = &v.SomeVal
			} else {
				unwrapped[i] = nil
			}
		}
		ptr = &unwrapped
	}
	container := nested.Container{Values: ptr}
	raw := container.Values
	var option lisette.Option[[]lisette.Option[int]]
	if raw != nil {
		src_1 := *raw
		wrapped := make([]lisette.Option[int], len(src_1))
		for i_1, v_1 := range src_1 {
			if v_1 != nil {
				wrapped[i_1] = lisette.MakeOptionSome[int](*v_1)
			} else {
				wrapped[i_1] = lisette.MakeOptionNone[int]()
			}
		}
		option = lisette.MakeOptionSome[[]lisette.Option[int]](wrapped)
	} else {
		option = lisette.MakeOptionNone[[]lisette.Option[int]]()
	}
	roundtrip := option
	_ = roundtrip
}
