tests/spec/emit/snapshots/interop_nested_option_collections_bridge_go_returns.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/nested"
  
  fn main() {
    let values = nested.Values()
    let maybe_values = nested.MaybeValues()
    let _ = values
    let _ = maybe_values
  }
---
package main

import (
	"example.com/nested"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	src := nested.Values()
	wrapped := make([]lisette.Option[int], len(src))
	for i, v := range src {
		if v != nil {
			wrapped[i] = lisette.MakeOptionSome[int](*v)
		} else {
			wrapped[i] = lisette.MakeOptionNone[int]()
		}
	}
	ret, ret_1 := nested.MaybeValues()
	var maybe_values lisette.Option[[]lisette.Option[int]]
	if ret_1 {
		wrapped_1 := make([]lisette.Option[int], len(ret))
		for i_1, v_1 := range ret {
			if v_1 != nil {
				wrapped_1[i_1] = lisette.MakeOptionSome[int](*v_1)
			} else {
				wrapped_1[i_1] = lisette.MakeOptionNone[int]()
			}
		}
		maybe_values = lisette.MakeOptionSome[[]lisette.Option[int]](wrapped_1)
	} else {
		maybe_values = lisette.MakeOptionNone[[]lisette.Option[int]]()
	}
	_ = maybe_values
}
