tests/spec/emit/snapshots/interop_nested_slice_of_option_unwrapped_at_go_field.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/cli"
  
  fn main() {
    let f1 = &cli.Flag { Name: "a", .. }
    let f2 = &cli.Flag { Name: "b", .. }
    let g = cli.Group {
      Flags: [[Some(f1), Some(f2)]],
      ..,
    }
    let _ = g
  }
---
package main

import (
	"example.com/cli"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	f1 := &cli.Flag{Name: "a"}
	f2 := &cli.Flag{Name: "b"}
	src := [][]lisette.Option[*cli.Flag]{{lisette.MakeOptionSome(f1), lisette.MakeOptionSome(f2)}}
	unwrapped := make([][]*cli.Flag, len(src))
	for i, v := range src {
		unwrapped_1 := make([]*cli.Flag, len(v))
		for i_1, v_1 := range v {
			if v_1.Tag == lisette.OptionSome {
				unwrapped_1[i_1] = v_1.SomeVal
			}
		}
		unwrapped[i] = unwrapped_1
	}
	g := cli.Group{Flags: unwrapped}
	_ = g
}
