tests/spec/emit/snapshots/interop_nilable_channel_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/reg"
  
  fn main() {
    match reg.Events() {
      Some(ch) => { let _ = ch.receive() },
      None => { let _ = 0 },
    }
  }
---
package main

import (
	"example.com/reg"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	if ch := reg.Events(); ch != nil {
		lisette.ChannelReceive(ch)
	}
}
