tests/spec/emit/snapshots/interop_nilable_map_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/reg"
  
  fn main() {
    match reg.Registry(true) {
      Some(m) => { let _ = m.length() },
      None => { let _ = 0 },
    }
  }
---
package main

import "example.com/reg"

func main() {
	if m := reg.Registry(true); m != nil {
		_ = len(m)
	}
}
