tests/spec/emit/snapshots/interop_nilable_return_through_chained_newtypes.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/reg"
  
  fn main() {
    match reg.Lookup() {
      Some(idx) => { let _ = idx },
      None => { let _ = 0 },
    }
  }
---
package main

import "example.com/reg"

func main() {
	if idx := reg.Lookup(); idx != nil {
		_ = idx
	}
}
