tests/spec/emit/snapshots/interop_nullable_call_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:flag"
  
  fn apply(f: fn(string) -> Option<Ref<flag.Flag>>, name: string) -> bool {
    match f(name) {
      Some(_) => true,
      None => false,
    }
  }
  
  fn main() {
    let r = apply(flag.Lookup, "verbose")
    let _ = r
  }
---
package main

import "flag"

func apply(f func(string) *flag.Flag, name string) bool {
	if ret := f(name); ret != nil {
		return true
	} else {
		return false
	}
}

func main() {
	r := apply(flag.Lookup, "verbose")
	_ = r
}
